# BrainSimulator

./: BrainSim.pro  CMakeLists.txt  README.md
platform/android/: AndroidManifest.xml  build.gradle
platform/ios/: Info.plist
platform/macos/: Info.plist
src/: glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  platform.h
src/brain/: brain.cpp  brain.h  connectome_data.cpp  connectome_data.h  neuron.cpp  neuron.h  synapse.h
src/creature/: creature.cpp  creature.h  leg.cpp  leg.h  sensor.cpp  sensor.h
src/renderer/: brain_renderer.cpp  brain_renderer.h  creature_renderer.cpp  creature_renderer.h  world_renderer.cpp  world_renderer.h
src/world/: food.h  obstacle.h  world.cpp  world.h
